[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exorr-prompt-fuzzer"
version = "1.0.0"
description = "EXORR Prompt Fuzzer — Automated LLM prompt injection testing for red teams"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "EXORR Security", email = "exorrnull@gmail.com"}]
keywords = ["prompt-injection", "llm-security", "red-team", "ai-security", "fuzzer", "jailbreak"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = ["requests>=2.28.0"]

[project.scripts]
exorr-prompt-fuzzer = "exorr_prompt_fuzzer.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["exorr_prompt_fuzzer*"]
